# stat_rethinking_2026

./: README.md  pyproject.toml  setup.md
homework/: BMJSubmissions.csv
homework/aurimas/: homework_A02.ipynb
python_code/: Chapter_2.ipynb  Chapter_3.ipynb  requirements.txt
python_code/data/: homeworkch3.csv  monkeys.csv
