[project]
dependencies = []
name = "stat_rethinking_2026"
requires-python = ">=3.12, <3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]

[tool.pixi.tasks]

[tool.pixi.dependencies]
pymc = ">=5.27.1,<6"
numpy = ">=2.3.5,<3"
polars = ">=1.37.1,<2"
altair = ">=6.0.0,<7"
arviz = ">=0.23.1,<0.24"
preliz = ">=0.23.0,<0.24"
ipykernel = ">=7.1.0,<8"
scipy = ">=1.17.0,<2"
ruff = ">=0.14.14,<0.15"
vl-convert-python = ">=1.9.0,<2"
python-graphviz = ">=0.21,<0.22"
graphviz = ">=14.1.2,<15"
ipywidgets = ">=8.1.8,<9"
statsmodels = ">=0.14.6,<0.15"
